Revised for J11/V23 and updated project version.